added information to page header

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
         <div class='page-header'>
             <h1>Digital Sport Academy API Documentation</h1>
             <p>
-                The Digital Sport Academy API provides access to customer data.
+                The Digital Sport Academy API provides access to customer data using JSON.
             </p>
         </div>
         <h3>Base URL</h3>
