added parameters to get methods

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -118,6 +118,10 @@
                 <ul>
                     <li>Authorization: Bearer YOUR_JWT_TOKEN</li>
                 </ul>
+                <p><b>Parameters:</b></p>
+                <ul>
+                    <li><b>{ id }:</b> The unique identifier of the customer document id.</li>
+                </ul>
                 <p><b>Response body:</b></p>
                 <pre>
 {
@@ -148,6 +152,10 @@
                 <p><b>Header:</b></p>
                 <ul>
                     <li>Authorization: Bearer YOUR_JWT_TOKEN</li>
+                </ul>
+                <p><b>Parameters:</b></p>
+                <ul>
+                    <li><b>{ email }:</b> Customer's email.</li>
                 </ul>
                 <p><b>Response body:</b></p>
                 <pre>
